--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "ejs": "^3.1.8",
     "esbuild": "^0.14.39",
     "express": "^4.18.1",
+    "fluent-ffmpeg": "^2.1.2",
     "glob": "^8.0.3",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "ytdl-core": "^4.11.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.1",
+    "@types/fluent-ffmpeg": "^2.1.20",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
