--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
         "google"
     ],
     "parser": "@typescript-eslint/parser",
+    "ignorePatterns": ["public/js/*.js"],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
