--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.1",
     "fluent-ffmpeg": "^2.1.2",
     "glob": "^8.0.3",
+    "node-id3": "^0.2.3",
     "typescript": "^4.6.4",
     "ytdl-core": "^4.11.0"
   },
