--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-build": "tsc --noEmit && node build.js",
-    "dev-run": "node dist/server.js"
+    "dev-run": "node dist/server.js",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
