--- a/.github/workflows/deploy-heroku.yml
+++ b/.github/workflows/deploy-heroku.yml
@@ -12,7 +12,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_api_key: ${{heroku.HEROKU_API_KEY}}
           heroku_app_name: "dream-dl"
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
-          remote_branch: "main"
+          heroku_email: ${{heroku.HEROKU_EMAIL}}
