--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "dream-dl"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          justlogin: true
+      - run: git push origin main
